--- a/user/config.json
+++ b/user/config.json
@@ -1,42 +1,54 @@
 {
-  'states': [
+  "create": [
     {
-      'xpath': '//*[@id="app"]/div/div/div/main/div/div/div[2]/form/div[3]/button[1]',
-      "clickable": True
+      "value": null,
+      "xpath": "//*[@id='app']/div/div/div/main/div/div/div[2]/form/div[3]/button[1]",
+      "clickable": true
     },
     {
-      'value': 'test0',
-      'xpath': '//*[@id="__BVID__18"]',
-      'clickable': False
-    },  #TODO guitseeh
-    {
-      'value': '1234567',
-      'xpath': '//*[@id="__BVID__20"]',
-      'clickable': False
+      "value": "test0",
+      "xpath": "//*[@id='__BVID__18']",
+      "clickable": false
     },
     {
-      'value': '1234567',
-      'xpath': '//*[@id="__BVID__22"]',
-      'clickable': False
+      "value": "1234567",
+      "xpath": "//*[@id='__BVID__20']",
+      "clickable": false
     },
     {
-      'value': 'tserensodnom.t@gmail.com',
-      'xpath': '//*[@id="__BVID__24"]',
-      'clickable': False
+      "value": "1234567",
+      "xpath": "//*[@id='__BVID__22']",
+      "clickable": false
     },
     {
-      'value': 'Firstname',
-      'xpath': '//*[@id="__BVID__26"]',
-      'clickable': False
+      "value": "tserensodnom.t@gmail.com",
+      "xpath": "//*[@id='__BVID__24']",
+      "clickable": false
     },
     {
-        'value': 'Lastname',
-        'xpath': '//*[@id="__BVID__28"]',
-        'clickable': False
+      "value": "Firstname",
+      "xpath": "//*[@id='__BVID__26']",
+      "clickable": false
     },
     {
-        'xpath': '//*[@id="__BVID__13___BV_modal_footer_"]/button[2]',
-        'clickable': True
+        "value": "Lastname",
+        "xpath": "//*[@id='__BVID__28']",
+        "clickable": false
+    },
+    {
+        "value": "",
+        "xpath": "//*[@id='__BVID__13___BV_modal_footer_']/button[2]",
+        "clickable": true
+    }
+  ],
+  "logout": [
+    {
+      "method": "nav-item",
+      "first": true
+    },
+    {
+      "method": "Logout",
+      "first": false
     }
   ]
 }
